--- a/index.html
+++ b/index.html
@@ -2,36 +2,36 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>ZAP</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Righteous&display=swap" rel="stylesheet">
+  <title>ZAP</title>
 </head>
 
 <body>
-    <div class="full-body">
-        <header class="header">
-            <h1 class="title head"><a href="#">ZAP</a></h1>
-            <h2 class="subtitle head">Zoom Aftermarket Products</h2>
-            <!-- about pop-up -->
-        </header>
-        <main class="pos">
-            <div class="backgrounds items">
-                <!-- <img src="https://scx2.b-cdn.net/gfx/news/hires/2019/2-forest.jpg" alt="misty forest"
-                    class="background-image"> -->
-                <a href="#">Backgrounds</a></div>
-            <div class="extensions items"><a href="#">Extensions</a></div>
-            <div class="products items"><a href="#">Products</a></div>
-        </main>
-        <div class="checkout">
-            <button></button>
-            <button class="cart"><i class="fas fa-shopping-cart"></i></button>
-        </div>
-
+  <div class="full-body">
+    <header class="header">
+      <!-- <img class="ZoomLogo" src="./POS_Assets/ZoomLogo.png" alt="ZoomLogo"> -->
+      <h1 class="title head"><a href="#">ZAP</a></h1>
+      <h2 class="subtitle head">Zoom Aftermarket Products</h2>
+      <!-- about pop-up -->
+    </header>
+    <main class="pos">
+      <div class="backgrounds items">
+        <!-- <img src="https://scx2.b-cdn.net/gfx/news/hires/2019/2-forest.jpg" alt="misty forest" class="background-image"> -->
+        <a href="#">Backgrounds</a></div>
+      <div class="extensions items"><a href="#">Extensions</a></div>
+      <div class="products items"><a href="#">Products</a></div>
+    </main>
+    <div class="checkout">
+      <button class="about button"><i class="fas fa-user"></i></button>
+      <button class="cart button"><i class="fas fa-shopping-cart"></i></button>
     </div>
+  </div>
 
-    <script src="https://kit.fontawesome.com/0f5174ed1d.js" crossorigin="anonymous"></script>
-    <script src="./script.js"></script>
+  <script src="https://kit.fontawesome.com/0f5174ed1d.js" crossorigin="anonymous"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
