--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
   <div class="full-body">
     <header class="header">
       <!-- <img class="ZoomLogo" src="./POS_Assets/ZoomLogo.png" alt="ZoomLogo"> -->
@@ -18,16 +19,22 @@
       <!-- about pop-up -->
     </header>
     <main class="pos">
+
       <div class="backgrounds items">
         <!-- <img src="https://scx2.b-cdn.net/gfx/news/hires/2019/2-forest.jpg" alt="misty forest" class="background-image"> -->
-        <a href="#">Backgrounds</a></div>
-      <div class="extensions items"><a href="#">Extensions</a></div>
-      <div class="products items"><a href="#">Products</a></div>
+        <a class="background-popup" href="#">Backgrounds</a></div>
+      <div class="extensions items">
+        <a class="extensions-popup" href="#">Extensions</a></div>
+      <div class="products items">
+        <a class="products-popup" href="#">Products</a></div>
     </main>
     <div class="checkout">
       <button class="about button"><i class="fas fa-user"></i></button>
       <button class="cart button"><i class="fas fa-shopping-cart"></i></button>
     </div>
+    <div class="b pop"></div>
+    <div class="e pop"></div>
+    <div class="p pop"></div>
   </div>
 
   <script src="https://kit.fontawesome.com/0f5174ed1d.js" crossorigin="anonymous"></script>
