adding content to popup

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>ZAP</title>
 </head>
 
-<body>
+<body class="body">
 
   <div class="full-body">
     <header class="header">
@@ -32,7 +32,42 @@
       <button class="about button"><i class="fas fa-user"></i></button>
       <button class="cart button"><i class="fas fa-shopping-cart"></i></button>
     </div>
-    <div class="b pop"></div>
+    <div class="b pop">
+      <div class="column-style">
+
+        <div class="this-is-fine side-by-side">
+          <img class="image" src="./POS_Assets/ThisIsFine.jpg" alt="">
+          <div class="info">
+            <h3 class="item-title"> This is Fine</h3>
+            <p class="product-info">Show off how little you care that the world is falling apart with this hilarious
+              background.</p>
+            <p class="price product-info">$0.50</p>
+            <button class="add-to-cart">Add to Cart</button>
+          </div>
+        </div>
+
+        <div class="tiger-king side-by-side">
+          <img class="image" src="./POS_Assets/TigerKing.jpg" alt="Joe Exotic with sweet tiger friend">
+          <div class="info">
+            <h3 class="item-title"> Tiger King</h3>
+            <p class="product-info">Who doesn't want to be seen with the most royal, the most trashy, and the most
+              ridiculous man himself; JOE EXOTIC</p>
+            <p class="price product-info">$500.00</p>
+            <button class="add-to-cart">Add to Cart</button>
+          </div>
+        </div>
+
+        <div class="simps side-by-side">
+          <img class="image" src="./POS_Assets/simps.jpg" alt="The Simpsons' Couch">
+          <div class="info">
+            <h3 class="item-title">Simpsons' Couch</h3>
+            <p class="product-info">Inject yourself into one of the most iconic TV shows to ever exist.</p>
+            <p class="price product-info">$50.00</p>
+            <button class="add-to-cart">Add to Cart</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="e pop"></div>
     <div class="p pop"></div>
   </div>
