--- a/index.html
+++ b/index.html
@@ -31,10 +31,54 @@
     <div class="checkout">
       <button class="about button"><i class="fas fa-user"></i></button>
       <button class="cart button"><i class="fas fa-shopping-cart"></i></button>
+      <div class="checkout-deets checkout-style"></div>
     </div>
-    <div class="b pop">
+    <div class="bpop">
       <div class="column-style">
+        <!-- BUTTON -->
+        <button class="exit button"><i class="fas fa-times"></i></button>
+        <!-- This ISNT fine -->
+        <div class="this-is-fine side-by-side">
+          <img class="image" src="./POS_Assets/ThisIsFine.jpg" alt="">
+          <div class="info">
+            <h3 class="item-title"> This is Fine</h3>
+            <p class="product-info">Show off how little you care that the world is falling apart with this hilarious
+              background.</p>
+            <p class="price product-info">$0.50</p>
+            <button class="add-to-cart" data-title="This is Fine" data-info="Show off how little you care that the world is falling apart with this hilarious
+            background." data-price="$0.50">Add to Cart</button>
+          </div>
+        </div>
+        <!-- Tiger King -->
+        <div class="tiger-king side-by-side">
+          <img class="image" src="./POS_Assets/TigerKing.jpg" alt="Joe Exotic with sweet tiger friend">
+          <div class="info">
+            <h3 class="item-title"> Tiger King</h3>
+            <p class="product-info">Who doesn't want to be seen with the most royal, the most trashy, and the most
+              ridiculous man himself; JOE EXOTIC</p>
+            <p class="price product-info">$500.00</p>
+            <button class="add-to-cart" data-title="Tiger King" data-info="Who doesn't want to be seen with the most royal, the most trashy, and the most
+            ridiculous man himself; JOE EXOTIC" data-price="$500.00">Add to Cart</button>
+          </div>
+        </div>
+        <!-- Simps -->
+        <div class="simps side-by-side">
+          <img class="image" src="./POS_Assets/simps.jpg" alt="The Simpsons' Couch">
+          <div class="info">
+            <h3 class="item-title">Simpsons' Couch</h3>
+            <p class="product-info">Inject yourself into one of the most iconic TV shows to ever exist.</p>
+            <p class="price product-info">$50.00</p>
+            <button class="add-to-cart" data-title="Simpsons' Couch"
+              data-info="Inject yourself into one of the most iconic TV shows to ever exist." data-price="$50.00">Add to
+              Cart</button>
+          </div>
 
+        </div>
+      </div>
+    </div>
+    <div class="epop">
+      <!-- <div class="column-style">
+        <button class="exit button"><i class="fas fa-times"></i></button>
         <div class="this-is-fine side-by-side">
           <img class="image" src="./POS_Assets/ThisIsFine.jpg" alt="">
           <div class="info">
@@ -66,10 +110,9 @@
             <button class="add-to-cart">Add to Cart</button>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
-    <div class="e pop"></div>
-    <div class="p pop"></div>
+    <div class="ppop"></div>
   </div>
 
   <script src="https://kit.fontawesome.com/0f5174ed1d.js" crossorigin="anonymous"></script>
