checkout somewhat there

--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
       <div class="products items">
         <a class="products-popup" href="#">Products</a></div>
     </main>
-    <div class="checkout">
+    <div class="cart-container">
+      <div class="checkout-deets checkout-style"></div>
+    </div>
+    <div class="footer">
       <button class="about button"><i class="fas fa-user"></i></button>
       <button class="cart button"><i class="fas fa-shopping-cart"></i></button>
-      <div class="checkout-deets checkout-style"></div>
+
     </div>
     <div class="bpop">
       <div class="column-style">
