--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
         <a class="products-popup" href="#">Products</a></div>
     </main>
     <div class="cart-container">
-      <div class="checkout-deets checkout-style"></div>
+      <div class="checkout-deets checkout-style">
+        <div>
+          <p class="subtotal">Subtotal: $0.00</p>
+        </div>
+      </div>
+
     </div>
     <div class="footer">
       <button class="about button"><i class="fas fa-user"></i></button>
@@ -49,7 +54,7 @@
               background.</p>
             <p class="price product-info">$0.50</p>
             <button class="add-to-cart" data-title="This is Fine" data-info="Show off how little you care that the world is falling apart with this hilarious
-            background." data-price="$0.50">Add to Cart</button>
+            background." data-price="0.50">Add to Cart</button>
           </div>
         </div>
         <!-- Tiger King -->
@@ -61,7 +66,7 @@
               ridiculous man himself; JOE EXOTIC</p>
             <p class="price product-info">$500.00</p>
             <button class="add-to-cart" data-title="Tiger King" data-info="Who doesn't want to be seen with the most royal, the most trashy, and the most
-            ridiculous man himself; JOE EXOTIC" data-price="$500.00">Add to Cart</button>
+            ridiculous man himself; JOE EXOTIC" data-price="500.00">Add to Cart</button>
           </div>
         </div>
         <!-- Simps -->
@@ -72,7 +77,7 @@
             <p class="product-info">Inject yourself into one of the most iconic TV shows to ever exist.</p>
             <p class="price product-info">$50.00</p>
             <button class="add-to-cart" data-title="Simpsons' Couch"
-              data-info="Inject yourself into one of the most iconic TV shows to ever exist." data-price="$50.00">Add to
+              data-info="Inject yourself into one of the most iconic TV shows to ever exist." data-price="50.00">Add to
               Cart</button>
           </div>
 
