--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
             <h3 class="item-title">Rona Emoji</h3>
             <p class="product-info">Use this emoji when you spot another zoomer who is showing symptoms of the RONA</p>
             <p class="price product-info">$3.00</p>
-            <button class="add-to-cart">Add to Cart</button>
+            <button class="add-to-cart" data-title="Rona Emoji" data-price="3.00"
+              data-info="Use this emoji when you spot another zoomer who is showing symptoms of the RONA">Add to
+              Cart</button>
           </div>
         </div>
 
@@ -104,7 +106,8 @@
             <p class="product-info">Want to rat out a zoomer you see that's not practicing social distancing? Use this
               emoji to immediately contact the authorities</p>
             <p class="price product-info">$0.01</p>
-            <button class="add-to-cart">Add to Cart</button>
+            <button class="add-to-cart" data-title="Social Distancing Police Emoji" data-price="0.01" data-info="Want to rat out a zoomer you see that's not practicing social distancing? Use this
+            emoji to immediately contact the authorities">Add to Cart</button>
           </div>
         </div>
 
@@ -115,7 +118,8 @@
             <p class="product-info">Do you want to be the center of attention? Do you think you deserve that? Seriously?
               Ok then. Announce your arrival with an airhorn that blasts everyone's ears to bits</p>
             <p class="price product-info">$5,000.00</p>
-            <button class="add-to-cart">Add to Cart</button>
+            <button class="add-to-cart" data-title="Airhorn Entrance" data-price="5000.00" data-info="Do you want to be the center of attention? Do you think you deserve that? Seriously?
+            Ok then. Announce your arrival with an airhorn that blasts everyone's ears to bits">Add to Cart</button>
           </div>
         </div>
       </div>
@@ -130,7 +134,8 @@
             <p class="product-info">Provide us with a picture of yourself and we'll return to you a custom "fake you"
               background. Now no one will know whether or not you're in the meeting</p>
             <p class="price product-info">$300.00</p>
-            <button class="add-to-cart">Add to Cart</button>
+            <button class="add-to-cart" data-title="Fake You Background" data-price="300.00" data-info="Provide us with a picture of yourself and we'll return to you a custom 'fake you'
+            background. Now no one will know whether or not you're in the meeting">Add to Cart</button>
           </div>
         </div>
 
@@ -141,7 +146,8 @@
             <p class="product-info">With this HD 1080p webcam, everyone will be able to see your flawless (or terribly
               scarred) skin. Be sure to floss before you utilize this bad boy!</p>
             <p class="price product-info">$666.00</p>
-            <button class="add-to-cart">Add to Cart</button>
+            <button class="add-to-cart" data-title="1080p Webcam" data-price="666.00" data-info="With this HD 1080p webcam, everyone will be able to see your flawless (or terribly
+            scarred) skin. Be sure to floss before you utilize this bad boy!">Add to Cart</button>
           </div>
         </div>
 
@@ -151,7 +157,8 @@
             <h3 class="item-title">Zoom Meeting Shirt</h3>
             <p class="product-info">Think you're funny? Think again if you actually want this shirt</p>
             <p class="price product-info">$10.00</p>
-            <button class="add-to-cart">Add to Cart</button>
+            <button class="add-to-cart" data-title="Zoom Meeting Shirt" data-price="10.00"
+              data-info="Think you're funny? Think again if you actually want this shirt">Add to Cart</button>
           </div>
         </div>
 
@@ -161,7 +168,8 @@
             <h3 class="item-title">Boom Zoom Shirt</h3>
             <p class="product-info">Boom, boom, boom, boom, I want you in my Zoom. Need I say more?</p>
             <p class="price product-info">$25.00</p>
-            <button class="add-to-cart">Add to Cart</button>
+            <button class="add-to-cart" data-title="Boom Zoom Shirt" data-price="25.00"
+              data-info="Boom, boom, boom, boom, I want you in my Zoom. Need I say more?">Add to Cart</button>
           </div>
         </div>
       </div>
