--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
     </main>
     <div class="cart-container">
       <div class="checkout-deets checkout-style">
+        <button class="exit button cexit"><i class="fas fa-times"></i></button>
         <div>
           <p class="subtotal">Subtotal: $0.00</p>
+          <p class="tax">Tax: $0.00</p>
+          <p class="total">Total: $0.00</p>
         </div>
       </div>
 
