--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
           <img class="image" src="./POS_Assets/TigerKing.jpg" alt="Joe Exotic with sweet tiger friend">
           <div class="info">
             <h3 class="item-title"> Tiger King</h3>
-            <p class="product-info">Who doesn't want to be seen with the most royal, the most trashy, and the most
-              ridiculous man himself; JOE EXOTIC</p>
+            <p class="product-info">Join your next meeting side-by-side with Joe Exotic himself</p>
             <p class="price product-info">$500.00</p>
             <button class="add-to-cart" data-title="Tiger King" data-info="Who doesn't want to be seen with the most royal, the most trashy, and the most
             ridiculous man himself; JOE EXOTIC" data-price="500.00">Add to Cart</button>
@@ -94,7 +93,7 @@
           <img class="image" src="./POS_Assets/RonaEmoji.png" alt="Rona">
           <div class="info">
             <h3 class="item-title">Rona Emoji</h3>
-            <p class="product-info">Use this emoji when you spot another zoomer who is showing symptoms of the RONA</p>
+            <p class="product-info">Use this emoji when you spot another zoomer who is showing symptoms of COVID</p>
             <p class="price product-info">$3.00</p>
             <button class="add-to-cart" data-title="Rona Emoji" data-price="3.00"
               data-info="Use this emoji when you spot another zoomer who is showing symptoms of the RONA">Add to
@@ -106,8 +105,8 @@
           <img class="image" src="./POS_Assets/SocialDistanceEmoji.jpg" alt="SocialDistanceEmoji">
           <div class="info">
             <h3 class="item-title">Social Distance Police Emoji</h3>
-            <p class="product-info">Want to rat out a zoomer you see that's not practicing social distancing? Use this
-              emoji to immediately contact the authorities</p>
+            <p class="product-info">Use this emoji to immediately contact the authorities when you see someone not
+              practicing social distancing</p>
             <p class="price product-info">$0.01</p>
             <button class="add-to-cart" data-title="Social Distancing Police Emoji" data-price="0.01" data-info="Want to rat out a zoomer you see that's not practicing social distancing? Use this
             emoji to immediately contact the authorities">Add to Cart</button>
@@ -118,8 +117,8 @@
           <img class="image" src="./POS_Assets/AirHornEntrance.png" alt="Airhorn">
           <div class="info">
             <h3 class="item-title">Airhorn Entrance</h3>
-            <p class="product-info">Do you want to be the center of attention? Do you think you deserve that? Seriously?
-              Ok then. Announce your arrival with an airhorn that blasts everyone's ears to bits</p>
+            <p class="product-info">Do you want to be the center of attention? Announce your arrival with an airhorn
+              that blasts everyone's ears to bits</p>
             <p class="price product-info">$5,000.00</p>
             <button class="add-to-cart" data-title="Airhorn Entrance" data-price="5000.00" data-info="Do you want to be the center of attention? Do you think you deserve that? Seriously?
             Ok then. Announce your arrival with an airhorn that blasts everyone's ears to bits">Add to Cart</button>
@@ -135,7 +134,7 @@
           <div class="info">
             <h3 class="item-title">Fake You Background</h3>
             <p class="product-info">Provide us with a picture of yourself and we'll return to you a custom "fake you"
-              background. Now no one will know whether or not you're in the meeting</p>
+              background</p>
             <p class="price product-info">$300.00</p>
             <button class="add-to-cart" data-title="Fake You Background" data-price="300.00" data-info="Provide us with a picture of yourself and we'll return to you a custom 'fake you'
             background. Now no one will know whether or not you're in the meeting">Add to Cart</button>
@@ -147,7 +146,7 @@
           <div class="info">
             <h3 class="item-title">1080p Webcam</h3>
             <p class="product-info">With this HD 1080p webcam, everyone will be able to see your flawless (or terribly
-              scarred) skin. Be sure to floss before you utilize this bad boy!</p>
+              scarred) skin.</p>
             <p class="price product-info">$666.00</p>
             <button class="add-to-cart" data-title="1080p Webcam" data-price="666.00" data-info="With this HD 1080p webcam, everyone will be able to see your flawless (or terribly
             scarred) skin. Be sure to floss before you utilize this bad boy!">Add to Cart</button>
@@ -169,7 +168,7 @@
           <img class="image" src="./POS_Assets/ZoomBoom.png" alt="ZoomShirt2">
           <div class="info">
             <h3 class="item-title">Boom Zoom Shirt</h3>
-            <p class="product-info">Boom, boom, boom, boom, I want you in my Zoom. Need I say more?</p>
+            <p class="product-info">Boom, boom, boom, boom, I want you in my Zoom.</p>
             <p class="price product-info">$25.00</p>
             <button class="add-to-cart" data-title="Boom Zoom Shirt" data-price="25.00"
               data-info="Boom, boom, boom, boom, I want you in my Zoom. Need I say more?">Add to Cart</button>
