--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <a class="extensions-popup" href="#">Extensions</a></div>
       <div class="products items">
         <a class="products-popup" href="#">Products</a></div>
+      <div class="merch items">
+        <a class="merch-popup" href="#">Merch</a></div>
     </main>
     <div class="cart-container">
       <div class="checkout-deets checkout-style">
@@ -40,7 +42,8 @@
 
     </div>
     <div class="footer">
-      <button class="about button"><i class="fas fa-user"></i></button>
+      <button class="about button"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO"><i
+            class="fas fa-user"></i></a></button>
       <button class="cart button"><i class="fas fa-shopping-cart"></i></button>
 
     </div>
@@ -152,6 +155,11 @@
             scarred) skin. Be sure to floss before you utilize this bad boy!">Add to Cart</button>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="mpop">
+      <div class="column-style">
+        <button class="exit button mexit"><i class="fas fa-times"></i></button>
 
         <div class="zoomShirt side-by-side">
           <img class="image" src="./POS_Assets/ZoomShirt.png" alt="ZoomShirt">
