--- a/index.html
+++ b/index.html
@@ -52,14 +52,24 @@
               <input type="text" id="expiration-date">
               <label for="cvv">CVV</label>
               <input type="text" id="cvv">
-
             </form>
+          </div>
+          <button class="receipt-button last">Checkout</button>
+        </div>
+        <!-- Receipt -->
+        <div class="receiptBox">
+          <div class="rpop">
+            <div class="receipt column-style">
+              <div class="total_subtotal">
+                <p class="subtotal">Subtotal: $0.00</p>
+                <p class="tax">Tax: $0.00</p>
+                <p class="total">Total: $0.00</p>
+              </div>
+            </div>
           </div>
         </div>
 
-
-
-        <div class=total_subtotal>
+        <div class="total_subtotal">
           <p class="subtotal">Subtotal: $0.00</p>
           <p class="tax">Tax: $0.00</p>
           <p class="total">Total: $0.00</p>
