receipt math PART 1: to be continued...

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="cash">
             <form class="cash-form">
               <label for="cash-amount">Cash Amount</label>
-              <input type="text">
+              <input type="text" id="cash-amount">
             </form>
           </div>
           <button class="credit-button last">Pay Credit</button>
@@ -61,9 +61,12 @@
           <div class="rpop">
             <div class="receipt column-style">
               <div class="total_subtotal">
-                <p class="subtotal">Subtotal: $0.00</p>
-                <p class="tax">Tax: $0.00</p>
-                <p class="total">Total: $0.00</p>
+                <p class="r-subtotal">Subtotal: $0.00</p>
+                <p class="r-tax">Tax: $0.00</p>
+                <p class="r-total">Total: $0.00</p>
+                <p class="amount-taken">Cash: $0.00</p>
+                <p class="change">Change: $0.00</p>
+                <p class="credit-card">Credit Card PAID</p>
               </div>
             </div>
           </div>
