rec figured out

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
           <div class="cash">
             <form class="cash-form">
               <label for="cash-amount">Cash Amount</label>
-              <input type="text" id="cash-amount">
+              <input type="text" id="cash-amount" name="cash-amount">
+              <button class="receipt-button cash-check">Checkout</button>
             </form>
           </div>
           <button class="credit-button last">Pay Credit</button>
@@ -52,9 +53,10 @@
               <input type="text" id="expiration-date">
               <label for="cvv">CVV</label>
               <input type="text" id="cvv">
+              <button class="receipt-button credit-check">Checkout</button>
             </form>
           </div>
-          <button class="receipt-button last">Checkout</button>
+          <!-- <button class="receipt-button last">Checkout</button> -->
         </div>
         <!-- Receipt -->
         <div class="receiptBox">
@@ -66,7 +68,7 @@
                 <p class="r-total">Total: $0.00</p>
                 <p class="amount-taken">Cash: $0.00</p>
                 <p class="change">Change: $0.00</p>
-                <p class="credit-card">Credit Card PAID</p>
+                <!-- <p class="credit-card">Credit Card PAID</p> -->
               </div>
             </div>
           </div>
