--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <div class="rpop">
             <div class="receipt column-style">
               <div class="total_subtotal">
+                <h4 class="receiptTitle">Receipt</h4>
                 <p class="r-subtotal">Subtotal: $0.00</p>
                 <p class="r-tax">Tax: $0.00</p>
                 <p class="r-total">Total: $0.00</p>
